# BeadSorter

./: .gitignore  BeadSorter.ino  Color.cpp  Color.h  Dropper.cpp  TCS.cpp  TCS.h  generatePinHeader.sh  pins.txt
BeadSorter/: Agitator.cpp  Agitator.h  BeadSorter.ino  CMakeLists.txt  Color.cpp  Color.h  Dropper.cpp  Dropper.h  Ssprintf.h  TCS.cpp  TCS.h  pins.h
pcb/: Sorter.brd  Sorter.cam  Sorter.sch
simulator/: CMakeLists.txt  characters.h  colors.cpp  colors.h  main.cpp  textRender.cpp  textRender.h  window.cpp  window.h  windowSize.h
simulator/ArduinoStub/: Arduino.cpp  Arduino.h  CMakeLists.txt  Serial.cpp  Serial.h  Servo.cpp  Servo.h  mock.cpp  mock.h
